# stm32mp1-baremetal

./: .gitignore  Dockerfile
bootloaders/mp1-boot/: Makefile
examples/copro_embedded/: Makefile
examples/dynload/pluginA/: CMakeLists.txt  pluginA.cc
examples/dynload/pluginB/: pluginB.cc
examples/dynload/pluginC/: d.s
examples/dynload/plugin_api/: plugin.hh  proc_create.hh  processor.hh
examples/shared/: align64.h  makefile-common.mk
examples/shared/stm32hal_patched/: stm32mp1xx_hal_pcd.c  stm32mp1xx_hal_pcd.h  stm32mp1xx_ll_usb.c
examples/usb_basic/: Makefile  rcc_setup.hh  usbd_conf.c  usbd_msc_storage.c
examples/usb_msc_device/: .clangd  Makefile  clocks.c  clocks.h  dbg_print.c  debug_write.h  debugc.h  hardware.c  hardware.h  irq.c  linkscript_ca7.ld  main.cc  paramdepend_irq.h  product.h  usbch9.h  usbd_composite_desc.c  usbd_composite_desc_util.c  usbd_composite_desc_util.h  usbd_composite_desc_values.h  usbd_conf.c  usbd_conf.h  usbd_desc.h  usbd_msc_storage.c
scripts/: rebuild.sh
shared/: makefile-common.mk
toolchains/: how_to_build_openocd.txt
toolchains/xpack-arm-none-eabi-gcc-12.2.1-1.2/lib64/: libcc1.so.0.0.0
toolchains/xpack-arm-none-eabi-gcc-12.2.1-1.2/libexec/: libcrypt.so.2.0.0  libcrypto.so.1.1  libexpat.so.1.6.7  libffi.so.8.1.2  libgmp.so.10.4.1  libiconv.so.2.6.0  libisl.so.15.0.0  liblzma.so.5.4.1  libmpc.so.3.0.0  libmpdec.so.2.5.1  libmpfr.so.4.1.6  libncurses.so.6.4  libpanel.so.6.4  libreadline.so.8.2  libsqlite3.so.0.8.6  libssl.so.1.1  libz.so.1.2.13  libzstd.so.1.5.2
(+64 files in other folders)
